[NR-24622] Support AGP/Gradle 8
* Upgrade min Gradle level to 7.1
* Upgrade min AGP level to 7.0.0
* Upgrade to ASM 9.1
* Update JDK compat level to 11
* Refactor Robolectric/Mockito for Gradle 8/JDK 17
  - Update test frameworks:
  - Robolectric (4.9.+)
  - Junit (4.12.+)
  - Mockito (4.+)
  - Spock (3.+)
 - Add test suites
* Upgrade Nexus plugin to 1.3.0
* Upgrade plugin management, migrate to settings.gradle
* Refactor Robolectric/Mockito/Spock frameworks for Gradle 8/JDK 17
* Add Kotlin plugin to build
* Refactor variant code to support AGP Components and Instrumentation APIs
* Upgrade extension to use properties/providers
* Adds docs to extension, to be used in public docs
* Add integration test suites
* Update the test harness
  - update test harness to min supported levels
  - Add a library and feature modules (disabled)
* Remove deprecations on legacy extension methods
  - They will not be removed, so eliminate confusion
* DexGuard support is currently disabled